[package]
name = "iced_webview"
version = "0.0.1"
edition = "2021"
rust-version = "1.81.0"
description = "iced webview library"
authors = ["LegitCamper"]
repository = "https://github.com/LegitCamper/iced_webview/"
readme = "README.md"

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["ultralight"]
ultralight = ["dep:ul-next"]
ultralight-resources = []

[dependencies]
clipboard-rs = "0.2.1"
iced = { version = "0.13", features = ["advanced", "image", "tokio", "lazy"] }
rand = "0.8.5"
smol_str = "0.2.2"
ul-next = { version = "0.4", optional = true }
url = "2.5.2"
html = "0.6.3"
