[package]
name = "iced_webview"
version = "0.0.3"
edition = "2021"
rust-version = "1.81.0"
description = "iced webview library"
authors = ["LegitCamper"]
repository = "https://github.com/LegitCamper/iced_webview/"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["docs_only"]
all-features = false
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["ultralight"]
ultralight = ["dep:ul-next"]
ultralight-resources = []
docs_only = []

[dependencies]
clipboard-rs = "0.2.1"
iced = { version = "0.13", features = ["advanced", "image", "tokio", "lazy"] }
rand = "0.8.5"
smol_str = "0.2.2"
ul-next = { version = "0.4", optional = true }
url = "2.5.2"
html = "0.6.3"
