[package]
name = "iced_webview"
version = "0.0.5"
edition = "2021"
rust-version = "1.81.0"
description = "An easily embedded webview library for iced"
authors = ["LegitCamper"]
repository = "https://github.com/LegitCamper/iced_webview/"
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["blitz"]
blitz = [
  "dep:blitz-dom",
  "dep:blitz-renderer-vello",
  "dep:blitz-traits",
  "dep:blitz-net",
  "dep:blitz-html",
]

[dependencies]
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "bf0fb5ca4a1dc556dfa90106a3f91a2ff03386cd", optional = true }
blitz-renderer-vello = { git = "https://github.com/DioxusLabs/blitz", rev = "bf0fb5ca4a1dc556dfa90106a3f91a2ff03386cd", optional = true }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "bf0fb5ca4a1dc556dfa90106a3f91a2ff03386cd", optional = true }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "bf0fb5ca4a1dc556dfa90106a3f91a2ff03386cd", optional = true }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "bf0fb5ca4a1dc556dfa90106a3f91a2ff03386cd", optional = true }
iced = { version = "0.13", features = ["advanced", "image", "tokio", "lazy"] }
clipboard-rs = "0.2.1"
rand = "0.8.5"
smol_str = "0.2.2"
url = "2.5.2"
html = "0.6.3"
iced_fonts = "0.1.1"
tokio = "1.43.0"
